Revision history for File::DataClass

0.13.422 2012-12-19
         - Passing io.t on win32. So now the remaining errors

0.13.421 2012-12-14
         - Tried to fix tests on win32

0.13.420 2012-12-12
         - Tried to fix tests on win32
         - F::DC::Schema load and dump are now also class methods

0.13.418 2012-11-13
         - Updated inc::Bob to 1.7. Removed defined ors

0.13.416 2012-11-07
         - Updated inc::Bob to 1.6
         - Fixed nasty bug in IO::umask_pop
         - Added IO::parent

0.12.411 2012-10-27
         - Fixed write filter bug in XML::Bare

0.12.409 2012-09-06
         - Added missing dependency on parent
         - Abstract and description POD fix for F:D:Functions

0.12.406 2012-09-02
         - Removed deprecated ioc_obj attribute
         - Allow CPAN testing to run on more platforms
         - Removed dependency on IPC::SRLock
         - Added spelling tests
         - Updated inc::Bob to 1.5
         - Changed OS unsupported message in inc/CPANTesting

0.11.401 2012-07-10
         - Added email_address method to F::MailAlias
         - Add class attribute to F::DC::Exception
         - F::DC::Storage::WithLanguage does not throw if no lang dep updates
         - Fixed F::Gettext::Storage::PO using name for msgid
         - Fixed gettext caching in F::DC::Storage::WithLanguage
         - Fixed bug in F::DC::HashMerge. Will update undef to 0
         - Made EXTENSIONS available in F::DC::Schema
         - Replace F::DC::Util with F::DC::Functions
         - Made JSON untaint the data it reads
         - Moved F::DC::Storage::extensions to F::DC::Util
         - Fixed using F::DC::Storage::WithLanguage with F::DC::S::Any
         - F::DC::Schema::translate defaults to storage class Any
         - Fixed bug in update detection logic
         - Fixed F::MailAlias api
         - Added Schema attribute builder, deprecated ioc_obj
         - Added columns and has_column to F::DC::ResultSource