@@ -1,5 +1,9 @@
 Revision history for File::DataClass
 
+         - Started using Sub::Exporter::Progressive
+         - Functions is_stale always true on MSWin32, so no mtime no caching
+         - Stopped using is_file when I mean exists
+
 0.13.422 2012-12-19
          - Passing io.t on win32. So now the remaining errors
 
